--- a/app/assets/stylesheets/admin/_colors.scss
+++ b/app/assets/stylesheets/admin/_colors.scss
@@ -4,6 +4,12 @@ $gray: #cccccc;
 $light_gray: #eeeeee;
 $very_light_gray: #fafafa;
 
-/* シアン系 */
+/* マゼンタ系 */
 $dark_magenta: #804488;
 $very_dark_magenta: darken($dark_magenta, 25%);
+
+/*赤系*/
+$red: #cc0000;
+
+/*緑系*/
+$green: #00cc00;
