--- a/app/assets/stylesheets/staff/tables.scss
+++ b/app/assets/stylesheets/staff/tables.scss
@@ -1,7 +1,7 @@
 @import "colors";
 @import "dimensions";
 
-div.tablewrapper {
+div.table-wrapper {
   div.links {
     text-align: right;
     padding: $moderate;
@@ -17,7 +17,7 @@ div.tablewrapper {
       color: $very_light_gray;
     }
     th, td { padding: $narrow; }
-    td.email, td.date { font-family: monospace; }
+    td.email, td.date, td.password { font-family: monospace; }
     td.boolean { text-align: center; }
     td.actions {
       text-align: center;
