--- a/app/views/layouts/staff.html.erb
+++ b/app/views/layouts/staff.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'staff', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'staff', 'data-turbolinks-track': 'reload' %>
     <meta name=‘viewport’ content=‘width=device-width, initial-scale=1, maximum-scale=1’>
   </head>
 
