--- a/app/assets/stylesheets/customer/_colors.scss
+++ b/app/assets/stylesheets/customer/_colors.scss
@@ -7,3 +7,9 @@ $very_light_gray: #fafafa;
 /* 黄色系 */
 $dark_yellow: #888744;
 $very_dark_yellow: darken($dark_yellow, 25%);
+
+/*赤系*/
+$red: #cc0000;
+$pink: #ffcccc;
+/*緑系*/
+$green: #00cc00;
