--- a/app/views/staff/programs/show.html.erb
+++ b/app/views/staff/programs/show.html.erb
@@ -19,4 +19,6 @@
     <tr><th>登録職員</th><td><%= p.registrant %></td></tr>
   </table>
   <div class="description"><%= p.description %></div>
+
+  <%= render 'entries_form' if @program.number_of_applicants > 0 %>
 </div>
