--- a/app/assets/stylesheets/staff/form.scss
+++ b/app/assets/stylesheets/staff/form.scss
@@ -21,6 +21,10 @@ div#wrapper {
             padding-left: $narrow;
             color: $red;
           }
+          span.instruction { font-size: $small; color: $dark_gray;}
+        }
+        div.input-block {
+          input { margin-right: $narrow * 2; }
         }
         div.notes {
           text-align: right;
@@ -44,6 +48,10 @@ div#wrapper {
         div.field_with_errors {
           display: inline;
           padding: 0;
+          label { color: $red; }
+          input { background-color: $pink; }
+        }
+        div.with-errors {
           label { color: $red; }
           input { background-color: $pink; }
         }
