--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -5,6 +5,7 @@
   <% if current_customer %>
     <%= link_to  "ログアウト", :customer_session, method: :delete %>
     <%= link_to  "アカウント", :customer_account %>
+    <%= link_to  "お問い合わせ", :new_customer_message %>
   <% else %>
     <%= link_to  "ログイン", :customer_login %>
   <% end %>
