--- a/app/assets/stylesheets/customer/form.scss
+++ b/app/assets/stylesheets/customer/form.scss
@@ -52,7 +52,7 @@ div#wrapper {
           display: inline;
           padding: 0;
           label { color: $red; }
-          input { background-color: $pink; }
+          input, textarea { background-color: $pink; }
         }
         div.with-errors {
           label { color: $red; }
