--- a/app/views/staff/shared/_header.html.erb
+++ b/app/views/staff/shared/_header.html.erb
@@ -2,12 +2,11 @@
   <%= link_to  "BAUKIS2", :staff_root, class: "logo-mark" %>
   <%= content_tag(:span, flash.notice, class: "notice") if flash.notice %>
   <%= content_tag(:span, flash.alert, class: "alert") if flash.alert %>
-  <%= 
-    if current_staff_member
-      link_to "ログアウト", :staff_session, method: :delete
-    else
-      link_to "ログイン", :staff_login
-    end
-  %>
-  <%= link_to  "アカウント", :staff_account if current_staff_member %>
+  <% if current_staff_member %>
+    <%=link_to "ログアウト", :staff_session, method: :delete %>
+    <%= link_to  "アカウント", :staff_account %>
+    <%= number_of_unprocessed_messages %>
+  <%else%>
+    <%=link_to "ログイン", :staff_login%>
+  <%end%>
 </header>
