--- a/app/views/staff/messages/index.html.erb
+++ b/app/views/staff/messages/index.html.erb
@@ -15,6 +15,7 @@
 <h1><%= @title %></h1>
 
 <div class="table-wrapper">
+  <%= render 'links' %>
   <%= paginate @messages %>
 
   <table class="listing">
@@ -43,4 +44,5 @@
   </table>
 
   <%= paginate @messages %>
+  <%= render 'tags' %>
 </div>
